# Relay

./: Cargo.toml  README.md  config.toml.example
.cargo/: audit.toml
crates/relay-core/src/: lib.rs  retained.rs  router.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: auth.rs  config.rs  connection.rs  hub.rs  main.rs  storage.rs  tls.rs  ws.rs
crates/relay-server/tests/: auth.rs  dashboard.rs  dlq.rs  handshake.rs  inflight_persistence.rs  persistence.rs  pubsub.rs  qos1.rs  qos2.rs  replay.rs  retained.rs  retry.rs  scrum168_auth_obligatoire.rs  scrum182_a0_acceptance.rs  scrum259_jwt_iss_aud.rs  session.rs  session_persistence.rs  shared.rs  tls.rs  unsubscribe.rs  us04_durability_conformance.rs  websocket.rs  will.rs
docs/: USAGE.md
