[workspace]
resolver = "2"
members = [
    "crates/relay-core",
    "crates/relay-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Martin Queval <martin.queval@bluesoft-group.com>"]

[workspace.dependencies]
relay-core = { path = "crates/relay-core" }
thiserror = "2"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
rmqtt-codec = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# MQTT-over-WebSocket transport: server-side HTTP->WS upgrade.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
# On-disk store (V2 persistence): pure-Rust embedded KV, single file, no native deps.
redb = "4"
# TLS (V2): rustls with the `ring` provider (builds cleanly on Windows/MSVC, no
# cmake/NASM needed unlike aws-lc-rs). tokio-rustls bridges it to tokio streams.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
# Self-signed cert generation, tests only.
rcgen = "0.13"
