[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Relay daemon — MQTT 5.0 broker over TCP and WebSocket."

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
relay-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
bytes.workspace = true
rmqtt-codec.workspace = true    # MQTT v5 codec (tokio-util 0.7 / bytes 1.x) from the rmqtt broker
tokio-util.workspace = true     # Framed (codec <-> stream/sink)
futures.workspace = true        # StreamExt / SinkExt over Framed
tokio-tungstenite.workspace = true  # MQTT-over-WebSocket (HTTP -> WS upgrade)

[dev-dependencies]
# WebSocket *client* for the e2e test (adds the `connect` feature; only pulled
# in for tests, the daemon itself stays handshake-only).
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake", "connect"] }
